--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
         build:
             context: .
         container_name: blog
-        ports:
-            - 80:80
-        # networks:
-        #     - proxy
+        networks:
+            - proxy
         restart: ${RESTART}
         labels:
           - "traefik.enable=true"
@@ -18,6 +16,6 @@ services:
           - "traefik.http.services.blog.loadbalancer.server.port=80"
           - "traefik.docker.network=proxy"
 
-# networks:
-#     proxy:
-#         external: true
+networks:
+    proxy:
+        external: true
